depr/p1/sample_tests/neg/ifStatement.java
class Base{
	public static void main(String[] args){
		if ( true ) int a = 1; 
	}
}
